ingress-multi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fabflix-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "stickounet"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
    - http:
        paths:
          # Login microservice handles authentication APIs
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: fabflix-login-service
                port:
                  number: 8080
          - path: /api/logout
            pathType: Prefix
            backend:
              service:
                name: fabflix-login-service
                port:
                  number: 8080
          - path: /api/session-check
            pathType: Prefix
            backend:
              service:
                name: fabflix-login-service
                port:
                  number: 8080

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fabflix-movies-service
                port:
                  number: 8080
          # All other requests go to the movie service (static + APIs)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fabflix-movies-service
                port:
                  number: 8080
